<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- android:icon="@drawable/icon_calendar_today_white_24dp" -->
    <item
        android:id="@+id/action_today"
        android:icon="@drawable/icon_calendar_today_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_today"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/icon_sync_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/icon_eye_white_24dp"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_group_visibility">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_day_view"
                    android:orderInCategory="100"
                    android:title="@string/action_day_view"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_three_day_view"
                    android:orderInCategory="100"
                    android:title="@string/action_three_day_view"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_week_view"
                    android:checked="true"
                    android:orderInCategory="100"
                    android:title="@string/action_week_view"
                    app:showAsAction="ifRoom" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/icon_settings_white_24dp"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/icon_information_outline_white_24dp"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_about" />

</menu>