<?xml version="1.0" encoding="utf-8"?>
<io.github.dreierf.materialintroscreen.parallax.ParallaxRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="164dp"
    android:paddingTop="40dp" >

    <TextView
        android:id="@+id/fragment_slide_account_configuration_textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_parallaxFactor="0.5"
        android:gravity="center"
        android:text="@string/intro_account_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/fragment_slide_account_configuration_textview_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_slide_account_configuration_textview_title"
        android:layout_marginBottom="8dp"
        app:layout_parallaxFactor="0.2"
        android:gravity="center"
        android:text="@string/intro_account_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <LinearLayout
        android:id="@+id/fragment_slide_student_id_linearlayout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_slide_account_configuration_textview_current_state"
        android:layout_below="@+id/fragment_slide_account_configuration_textview_description"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_parallaxFactor="0.1"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/fragment_slide_account_configuration_edittext_student_id"
            style="@style/accountConfigurationEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/fragment_slide_account_configuration_button_check"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_account_button_check" />
    </LinearLayout>

    <TextView
        android:id="@+id/fragment_slide_account_configuration_textview_current_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        app:layout_parallaxFactor="0.2"
        android:gravity="center"
        android:text="@string/intro_account_state_waiting"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

</io.github.dreierf.materialintroscreen.parallax.ParallaxRelativeLayout>