<?xml version="1.0" encoding="utf-8"?>
<io.github.dreierf.materialintroscreen.parallax.ParallaxRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="164dp"
    android:paddingTop="40dp">

    <TextView
        android:id="@+id/fragment_slide_schools_textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_parallaxFactor="0.5"
        android:gravity="center"
        android:text="@string/intro_school_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/fragment_slide_schools_textview_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_slide_schools_textview_title"
        android:layout_marginBottom="8dp"
        app:layout_parallaxFactor="0.2"
        android:gravity="center"
        android:text="@string/intro_school_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_slide_schools_recyclerview_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_slide_schools_radiogroup_answer"
        android:layout_below="@+id/fragment_slide_schools_textview_description"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_parallaxFactor="0.1"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>

    <RadioGroup
        android:id="@+id/fragment_slide_schools_radiogroup_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_parallaxFactor="0.4"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <RadioButton
            android:id="@+id/fragment_slide_schools_radiobutton_is_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_parallaxFactor="0.4"
            android:buttonTint="@color/colorAccent"
            android:text="@string/intro_school_radio_mine_is_present" />

        <RadioButton
            android:id="@+id/fragment_slide_schools_radiobutton_is_not_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_parallaxFactor="0.4"
            android:buttonTint="@color/colorAccent"
            android:text="@string/intro_school_radio_mine_is_not_present" />
    </RadioGroup>

</io.github.dreierf.materialintroscreen.parallax.ParallaxRelativeLayout>